<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/greenLight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mycompany.testapp.LevelsActivity"
    tools:showIn="@layout/activity_levels">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/logo"
        android:scaleType="center"
        android:layout_above="@+id/btnEasy"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modeEasy"
        android:textColor="@color/greenDark"
        android:onClick="startEasyMode"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/modeHard"
        android:textColor="@color/greenDark"
        android:onClick="startHardMode"
        android:layout_below="@+id/btnEasy"
        android:layout_alignLeft="@+id/btnEasy"
        android:layout_alignStart="@+id/btnEasy" />

    <TextView
        android:id="@+id/txtLevelHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/level_hint"
        android:textAlignment="center"
        android:textColor="@color/tealHint"
        android:layout_below="@+id/btnHard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</RelativeLayout>
